--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
     <link rel="stylesheet" href="main.css" />
     <script src="main.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div id="movie"></div>
+    <div id="movieInfo"></div>
+    <div id="movieSearch">
+      <input type="text" name="txt" id="txt" /><button id="btn">
+        Click here to submit
+      </button>
+    </div>
+  </body>
 </html>
